New FrostyBoy Sandbox/src/objects/Account_Campaign_Member__c.object
<CustomObject>
    <fields>
        <fullName>Account_Status1__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Campaign Members</relationshipLabel>
        <relationshipName>Account_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Account Campaign Members</relationshipLabel>
        <relationshipName>Account_Campaign_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Account Campaign Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACM-{0000}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Campaign Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>